deploy/k8s/cybercolors/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cybercolors-backend
  namespace: cybercolors
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
    - hosts:
        - cybercolors-api.lightny.pro
      secretName: cybercolors-backend-tls
    - hosts:
        - cybercolors-api.modral.app
      secretName: cybercolors-modral-backend-tls
    - hosts:
        - api.modral.app
      secretName: modral-api-tls
  rules:
    - host: cybercolors-api.lightny.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cybercolors-backend
                port:
                  number: 80
    - host: cybercolors-api.modral.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cybercolors-backend
                port:
                  number: 80
    - host: api.modral.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cybercolors-backend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cybercolors-frontend
  namespace: cybercolors
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - cybercolors.lightny.pro
      secretName: cybercolors-frontend-tls
    - hosts:
        - cybercolors.modral.app
      secretName: cybercolors-modral-frontend-tls
    - hosts:
        - dashboard.modral.app
      secretName: modral-dashboard-tls
  rules:
    - host: cybercolors.lightny.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cybercolors-frontend
                port:
                  number: 80
    - host: cybercolors.modral.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cybercolors-frontend
                port:
                  number: 80
    - host: dashboard.modral.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cybercolors-frontend
                port:
                  number: 80
